--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "camstreet",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "0.8.x",
+    "npm":  "1.1.62"
+  }
   "scripts": {
     "start": "node camstreet-server.js"
   },
