--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "0.8.x",
+    "node": "0.8.11",
     "npm":  "1.1.62"
-  }
+  },
   "scripts": {
     "start": "node camstreet-server.js"
   },
