update the dependencies and lots of refactoring to allow drawing of shapes to be replicated across clients

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "deepmerge"            : "*",
     "treeify"              : "*",
     "traverse"             : "*",
-    "shp2json"             : "*"
+    "shp2json"             : "*",
+    "geohash"              : "*"
   },
   "description": "ERROR: No README.md file found!",
   "main": "camstreet-server.js",
