now working with dotcloud provider

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "treeify"              : "*",
     "traverse"             : "*",
     "shp2json"             : "*",
+    "fs-extra"             : "*",
     "geohash"              : "*"
   },
   "description": "ERROR: No README.md file found!",
