more work on local ncwms

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "geohash"              : "*",
     "ncp"                  : "*",
     "node-uuid"            : "*",
+    "colors"               : "*",
     "cradle"               : "*",
     "replify"              : "*",
     "nano"                 : "*"
