make the availability and event data available

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ncp"                  : "*",
     "node-uuid"            : "*",
     "colors"               : "*",
+    "crossfilter"          : "*",
     "cradle"               : "*",
     "replify"              : "*",
     "nano"                 : "*"
