more work on clustering

--- a/package.json
+++ b/package.json
@@ -4,65 +4,66 @@
   "private": true,
   "engines": {
     "node": "0.8.11",
-    "npm":  "1.1.65"
+    "npm": "1.1.65"
   },
   "scripts": {
-    "test"    : "tap --debug test/*.js",
-    "start"   : "node camstreet-server.js",
-    "debug"   : "nodemon -w . -w html -w dist -w public -w lib -w views camstreet-server.js"
+    "test": "tap --debug test/*.js",
+    "start": "node camstreet-server.js",
+    "debug": "nodemon -w . -w html -w dist -w public -w lib -w views camstreet-server.js"
   },
   "dependencies": {
-    "buffer-stream"            : "*",
-    "tap"                      : "*",
-    "http-browserify"          : "*",
-    "connect"                  : "*",
-    "d8"                       : "*",
-    "date-utils"               : "*",
-    "jquery-browserify"        : "*",
-    "domready"                 : "*",
-    "browserify"               : "*",
-    "underscore"               : "*",
-    "express"                  : "*",
-    "mysql"                    : "*",
-    "ejs"                      : "*",
-    "socket.io"                : "*",
-    "socket.io-client"         : "*",
-    "socket.io-browserify"     : "*",
-    "d3"                       : "*",
-    "less-middleware"          : "*",
-    "node-sass"                : "*",
-    "underscore.nested"        : "*",
-    "deepmerge"                : "*",
-    "oppressor"                : "*",
-    "brfs"                     : "*",
-    "treeify"                  : "*",
-    "traverse"                 : "*",
-    "shp2json"                 : "*",
-    "fs-extra"                 : "*",
-    "geohash"                  : "*",
-    "ncp"                      : "*",
-    "node-uuid"                : "*",
-    "colors"                   : "*",
-    "crossfilter"              : "*",
-    "hyperglue"                : "*",
-    "hyperspace"               : "*",
-    "cradle"                   : "*",
-    "shapefile"                : "*",
-    "replify"                  : "*",
-    "topojson"                 : "*",
-    "pouchdb"                  : "*",
-    "backbone"                 : "*",
-    "googleapis"               : "*",
-    "google-drive"             : "*",
-    "google-calendar"          : "*",
-    "google-spreadsheet"       : "*",
-    "request"                  : "*",
-    "firebase"                 : "*",
-    "firebase-token-generator" : "*",
-    "passport"                 : "*",
-    "nano"                     : "*",
-    "angular-browserify"       : "*",
-    "passport-google-oauth"    : "*"
+    "buffer-stream": "*",
+    "tap": "*",
+    "http-browserify": "*",
+    "connect": "*",
+    "d8": "*",
+    "date-utils": "*",
+    "jquery-browserify": "*",
+    "domready": "*",
+    "browserify": "*",
+    "underscore": "*",
+    "express": "*",
+    "mysql": "*",
+    "ejs": "*",
+    "socket.io": "*",
+    "socket.io-client": "*",
+    "socket.io-browserify": "*",
+    "d3": "*",
+    "less-middleware": "*",
+    "node-sass": "*",
+    "underscore.nested": "*",
+    "deepmerge": "*",
+    "oppressor": "*",
+    "brfs": "*",
+    "treeify": "*",
+    "traverse": "*",
+    "shp2json": "*",
+    "fs-extra": "*",
+    "geohash": "*",
+    "ncp": "*",
+    "node-uuid": "*",
+    "colors": "*",
+    "crossfilter": "*",
+    "hyperglue": "*",
+    "hyperspace": "*",
+    "cradle": "*",
+    "shapefile": "*",
+    "replify": "*",
+    "topojson": "*",
+    "pouchdb": "*",
+    "backbone": "*",
+    "googleapis": "*",
+    "google-drive": "*",
+    "google-calendar": "*",
+    "google-spreadsheet": "*",
+    "request": "*",
+    "firebase": "*",
+    "firebase-token-generator": "*",
+    "passport": "*",
+    "nano": "*",
+    "angular-browserify": "*",
+    "passport-google-oauth": "*",
+    "leaflet-pip": "0.0.1"
   },
   "description": "",
   "main": "camstreet-server.js",
