--- a/package.json
+++ b/package.json
@@ -1,73 +1,78 @@
 {
-  "name": "camstreet",
-  "version": "0.0.1",
-  "private": true,
-  "engines": {
-    "node": "0.8.11",
-    "npm": "1.1.65"
+  "name"         : "camstreet",
+  "version"      : "0.0.1",
+  "private"      : true,
+  "engines"      : {
+    "node" : "0.8.11",
+    "npm"  : "1.1.65"
   },
-  "scripts": {
-    "test": "tap --debug test/*.js",
-    "start": "node camstreet-server.js",
-    "debug": "nodemon -w . -w html -w dist -w public -w lib -w views camstreet-server.js"
+  "scripts"      : {
+    "test"  : "tap --debug test/*.js",
+    "start" : "node camstreet-server.js",
+    "debug" : "nodemon -w . -w html -w dist -w public -w lib -w views camstreet-server.js"
   },
-  "dependencies": {
-    "buffer-stream": "*",
-    "tap": "*",
-    "http-browserify": "*",
-    "connect": "*",
-    "d8": "*",
-    "date-utils": "*",
-    "jquery-browserify": "*",
-    "domready": "*",
-    "browserify": "*",
-    "underscore": "*",
-    "express": "*",
-    "mysql": "*",
-    "ejs": "*",
-    "socket.io": "*",
-    "socket.io-client": "*",
-    "socket.io-browserify": "*",
-    "d3": "*",
-    "less-middleware": "*",
-    "node-sass": "*",
-    "underscore.nested": "*",
-    "deepmerge": "*",
-    "oppressor": "*",
-    "brfs": "*",
-    "treeify": "*",
-    "traverse": "*",
-    "shp2json": "*",
-    "fs-extra": "*",
-    "geohash": "*",
-    "ncp": "*",
-    "node-uuid": "*",
-    "colors": "*",
-    "crossfilter": "*",
-    "hyperglue": "*",
-    "hyperspace": "*",
-    "cradle": "*",
-    "shapefile": "*",
-    "replify": "*",
-    "topojson": "*",
-    "pouchdb": "*",
-    "backbone": "*",
-    "googleapis": "*",
-    "google-drive": "*",
-    "google-calendar": "*",
-    "google-spreadsheet": "*",
-    "request": "*",
-    "firebase": "*",
-    "firebase-token-generator": "*",
-    "passport": "*",
-    "nano": "*",
-    "angular-browserify": "*",
-    "passport-google-oauth": "*",
-    "leaflet-pip": "0.0.1"
+  "dependencies" : {
+    "buffer-stream"            : "*",
+    "tap"                      : "*",
+    "http-browserify"          : "*",
+    "connect"                  : "*",
+    "d8"                       : "*",
+    "date-utils"               : "*",
+    "jquery-browserify"        : "*",
+    "domready"                 : "*",
+    "browserify"               : "*",
+    "underscore"               : "*",
+    "express"                  : "*",
+    "mysql"                    : "*",
+    "ejs"                      : "*",
+    "socket.io"                : "*",
+    "socket.io-client"         : "*",
+    "socket.io-browserify"     : "*",
+    "d3"                       : "*",
+    "less-middleware"          : "*",
+    "node-sass"                : "*",
+    "underscore.nested"        : "*",
+    "deepmerge"                : "*",
+    "oppressor"                : "*",
+    "brfs"                     : "*",
+    "treeify"                  : "*",
+    "traverse"                 : "*",
+    "shp2json"                 : "*",
+    "fs-extra"                 : "*",
+    "geohash"                  : "*",
+    "ncp"                      : "*",
+    "node-uuid"                : "*",
+    "colors"                   : "*",
+    "crossfilter"              : "*",
+    "hyperglue"                : "*",
+    "hyperspace"               : "*",
+    "cradle"                   : "*",
+    "shapefile"                : "*",
+    "replify"                  : "*",
+    "topojson"                 : "*",
+    "pouchdb"                  : "*",
+    "backbone"                 : "*",
+    "googleapis"               : "*",
+    "google-drive"             : "*",
+    "google-calendar"          : "*",
+    "google-spreadsheet"       : "*",
+    "request"                  : "*",
+    "firebase"                 : "*",
+    "firebase-token-generator" : "*",
+    "passport"                 : "*",
+    "nano"                     : "*",
+    "angular-browserify"       : "*",
+    "passport-google-oauth"    : "*",
+    "leaflet-pip"              : "*",
+    "moment"                   : "*",
+    "moment-range"             : "*",
+    "moment-interval"          : "*",
+    "proxy-middleware"         : "*",
+    "lodash"                   : "*"
   },
-  "description": "",
-  "main": "camstreet-server.js",
-  "repository": "",
-  "author": "",
-  "license": "BSD"
+  "description"  : "",
+  "main"         : "camstreet-server.js",
+  "repository"   : "",
+  "author"       : "",
+  "license"      : "BSD"
 }
