--- a/package.json
+++ b/package.json
@@ -74,9 +74,17 @@
     "lodash"                   : "*",
     "xml2js"                   : "*",
     "sinon"                    : "*",
-    "xml-stream"               : "^0.4.4",
-    "errorhandler"             : "^1.0.1",
-    "morgan"                   : "^1.0.0",
+    "xml-stream"               : "*",
+    "errorhandler"             : "*",
+    "morgan"                   : "*",
+    "browser-request"          : "*",
+    "gulp"                     : "*",
+    "gulp-browserify"          : "*",
+    "gulp-debug"               : "*",
+    "gulp-tap"                 : "*",
+    "gulp-filelog"             : "*",
+    "q"                        : "*",
+    "through2"                 : "*",
     "through"                  : "*"
   },
   "description"  : "",
